dnl Process this file with autoconf to produce a configure script.
AC_INIT(records.el)

AC_ARG_ENABLE(xemacs,
[  --enable-xemacs        Use xemacs for compilation],
[AC_CHECK_PROGS(EMACS_BIN, xemacs)],
[AC_CHECK_PROGS(EMACS_BIN, emacs)])

AC_PATH_PROGS(PERL, perl perl5)

dnl for cygwin windows environment
AC_PATH_PROGS(CYGPATH, cygpath)

AC_PROG_INSTALL()

lispdir='${datadir}/emacs/site-lisp'

AC_SUBST(lispdir)

srcdirpath=`pwd`

AC_SUBST(srcdirpath)

AC_OUTPUT(Makefile recordsadmin, chmod +x recordsadmin)
